Added role based Auth for user endpoint